updated links and code

--- a/about.html
+++ b/about.html
@@ -21,10 +21,10 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" class="selected">Porfolio</a>
+                        <a href="index.html">Porfolio</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="about.html" class="selected">About</a>
                     </li>
                     <li>
                         <a href="contact.html">Contact</a>
@@ -34,38 +34,22 @@
         </header>
         <div id="wrapper">
             <section>
-                <ul id="gallery">
-                    <li>
-                        <a href="img/numbers-01.jpg">
-                            <img src="img/numbers-01.jpg" alt="" />
-                            <p>Experimentation with color and texture.</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="img/numbers-02.jpg">
-                            <img src="img/numbers-02.jpg" alt="" />
-                            <p>Playing some blending in photoshop.</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="img/numbers-06.jpg">
-                            <img src="img/numbers-06.jpg" alt="" />
-                            <p>Trying to create and 80's style.</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="img/numbers-09.jpg">
-                            <img src="img/numbers-09.jpg" alt="" />
-                            <p>Drips created using photoshop brushes.</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="img/numbers-12.jpg">
-                            <img src="img/numbers-12.jpg" alt="" />
-                            <p>Creating shapes using repetition.</p>
-                        </a>
-                    </li>
-                </ul>
+                <img
+                    src="img/nick.jpg"
+                    alt="Photo of Noman Rafiq"
+                    class="profile-photo"
+                />
+                <h3>About</h3>
+                <p>
+                    Hi, I am Nomee. This is my design portfolio where I share
+                    all of my favourite coding practices. When I am not coding,
+                    I enjoy exercising, playing video games, drinking coffe and
+                    more.
+                </p>
+                <p>
+                    If you would like to follow me, my username is
+                    <a href="https://twitter.com/heyimnomee">@imnomee</a>.
+                </p>
             </section>
             <footer>
                 <a href="https://www.twitter.com/heyimnomee">
