--- a/contact.html
+++ b/contact.html
@@ -21,49 +21,45 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="index.html" class="selected">Porfolio</a>
+                        <a href="index.html">Porfolio</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="contact.html" class="selected">Contact</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <div id="wrapper">
             <section>
-                <ul id="gallery">
-                    <li>
-                        <a href="img/numbers-01.jpg">
-                            <img src="img/numbers-01.jpg" alt="" />
-                            <p>Experimentation with color and texture.</p>
-                        </a>
+                <h3>General</h3>
+                <p>
+                    I am not currently looking for new design work, but I am
+                    available for speaking gigs and similar engagements. If you
+                    have any questions, please don't hesitate to get in touch
+                    with me!
+                </p>
+                <p>
+                    Please only use phone contact for urgent inquiries.
+                    Otherwise, Twitter and Email are best ways to reach me.
+                </p>
+            </section>
+            <section>
+                <h3>Contact Details</h3>
+                <ul class="contact-info">
+                    <li class="phone">
+                        <a href="tel:555-6425">555-6425</a>
                     </li>
-                    <li>
-                        <a href="img/numbers-02.jpg">
-                            <img src="img/numbers-02.jpg" alt="" />
-                            <p>Playing some blending in photoshop.</p>
-                        </a>
+                    <li class="mail">
+                        <a href="mailto:nomee@sample.com">nomee@sample.com</a>
                     </li>
-                    <li>
-                        <a href="img/numbers-06.jpg">
-                            <img src="img/numbers-06.jpg" alt="" />
-                            <p>Trying to create and 80's style.</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="img/numbers-09.jpg">
-                            <img src="img/numbers-09.jpg" alt="" />
-                            <p>Drips created using photoshop brushes.</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="img/numbers-12.jpg">
-                            <img src="img/numbers-12.jpg" alt="" />
-                            <p>Creating shapes using repetition.</p>
-                        </a>
+                    <li class="twitter">
+                        <a
+                            href="https://twitter.com/intent/tweet?screen_name=heyimnomee"
+                            >@heyimnomee</a
+                        >
                     </li>
                 </ul>
             </section>
