--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/responsive.css" />
         <title>Noman Rafiq | Full Stack JS Developer</title>
     </head>
     <body>
@@ -33,7 +34,7 @@
             </nav>
         </header>
         <div id="wrapper">
-            <section>
+            <section id="primary">
                 <h3>General</h3>
                 <p>
                     I am not currently looking for new design work, but I am
@@ -46,7 +47,7 @@
                     Otherwise, Twitter and Email are best ways to reach me.
                 </p>
             </section>
-            <section>
+            <section id="secondary">
                 <h3>Contact Details</h3>
                 <ul class="contact-info">
                     <li class="phone">
