--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="css/main.css" />
+        <link rel="stylesheet" href="css/responsive.css" />
         <title>Noman Rafiq | Full Stack JS Developer</title>
     </head>
     <body>
