final and complete sample

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
         />
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/responsive.css" />
-        <title>Noman Rafiq | Full Stack JS Developer</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Noman Rafiq &Vert; Full Stack JS Developer</title>
     </head>
     <body>
         <header>
@@ -35,33 +36,34 @@
         </header>
         <div id="wrapper">
             <section>
+                <h3>Portfolio Gallery</h3>
                 <ul id="gallery">
                     <li>
-                        <a href="img/numbers-01.jpg">
+                        <a href="img/numbers-01.jpg" target="_blank">
                             <img src="img/numbers-01.jpg" alt="" />
                             <p>Experimentation with color and texture.</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/numbers-02.jpg">
+                        <a href="img/numbers-02.jpg" target="_blank">
                             <img src="img/numbers-02.jpg" alt="" />
                             <p>Playing some blending in photoshop.</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/numbers-06.jpg">
+                        <a href="img/numbers-06.jpg" target="_blank">
                             <img src="img/numbers-06.jpg" alt="" />
                             <p>Trying to create and 80's style.</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/numbers-09.jpg">
+                        <a href="img/numbers-09.jpg" target="_blank">
                             <img src="img/numbers-09.jpg" alt="" />
                             <p>Drips created using photoshop brushes.</p>
                         </a>
                     </li>
                     <li>
-                        <a href="img/numbers-12.jpg">
+                        <a href="img/numbers-12.jpg" target="_blank">
                             <img src="img/numbers-12.jpg" alt="" />
                             <p>Creating shapes using repetition.</p>
                         </a>
