--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
         />
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/responsive.css" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Noman Rafiq | Full Stack JS Developer</title>
     </head>
     <body>
