--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         />
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/responsive.css" />
+        <script src="js/picturefill.min.js" async></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Noman Rafiq &Vert; Full Stack JS Developer</title>
     </head>
